--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,7 +16,7 @@ button {
     font-size: 1.8vh;
     padding: 0.3vh 1vh;
     margin-inline: 1vh;
-    border: 1.5px solid;
+    border: 2px solid;
     border-radius: 10px;
     min-width: 0.5vh;
     max-width: 9vh;
@@ -30,8 +30,8 @@ button {
 
 button:hover {
 
-    box-shadow: 0 0em 1em 0.5em rgb(132, 0, 255);
-    transform: translateY(-0.25);
+    box-shadow: 0 0 1em 0.5em rgb(132, 0, 255);
+    transform: translateY(-0.25%);
     transition: 2s;
 }
 
@@ -72,7 +72,7 @@ hr {
 #logoz:hover{
     /* box-shadow: 0 -1.5em 2em -0.2em rgba(0, 0, 255, 0.43); */
     border-radius: 700px;
-    transform: translateY(-0.25);
+    transform: translateY(-0.25%);
     transition: 2s;
 }
 
@@ -140,7 +140,7 @@ hr {
     min-height: 26px;
 }
 
-#par {
+.par {
     text-shadow: rgb(0, 0, 255);
     color: rgb(255, 255, 255);
     font-size: x-large;
@@ -150,7 +150,7 @@ hr {
 
 @keyframes AnimateBG {
     0% {
-        background-position: 0% 50%
+        background-position: 0 50%
     }
 
     50% {
@@ -158,7 +158,7 @@ hr {
     }
 
     100% {
-        background-position: 0% 50%
+        background-position: 0 50%
     }
 }
 
@@ -167,7 +167,7 @@ hr {
 
 #snd {
     font-family: 'Questrial', sans-serif;
-    background-image: url('me.jpg');
+    background-image: url('../images/me.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -177,7 +177,7 @@ hr {
 
 
 #YT iframe {
-    box-shadow: 0 0em 1em 0.2em rgba(0, 0, 0, 0.733);
+    box-shadow: 0 0 1em 0.2em rgba(0, 0, 0, 0.733);
     box-sizing: border-box;
     border-radius: 16px;
     margin: auto;
@@ -192,11 +192,11 @@ hr {
 
 
 #SP iframe{
-    box-shadow: 0 0em 1em 0.2em rgba(0, 0, 0, 0.638);
+    box-shadow: 0 0 1em 0.2em rgba(0, 0, 0, 0.638);
     background-color: black;
     box-sizing: border-box;
     border-radius: 16px;
-    padding: 0%;
+    padding: 0;
     margin: auto;
     width: 90%;
     height: 350px;
@@ -210,7 +210,7 @@ hr {
 }
 
 #TD iframe {
-    box-shadow: 0 0em 1em 0.2em rgba(0, 0, 0, 0.638);;
+    box-shadow: 0 0 1em 0.2em rgba(0, 0, 0, 0.638);;
     box-sizing: border-box;
     border-radius: 18px!important;
     margin-top: 10px;
@@ -240,22 +240,18 @@ hr {
             rgba(154, 0, 211, 0.718) 51%,
             rgba(0, 95, 113, 0.746) 100%);
     animation: AnimateBG 10s ease infinite;
-    box-shadow: 0 0em 1em 0.1em rgb(255, 255, 255);
+    box-shadow: 0 0 1em 0.1em rgb(255, 255, 255);
     z-index: 1;
-}
-
-.sticky {
-    position: fixed;
+    position: sticky;
     top: 0;
-    width: 100%;
-    padding-top: auto;
-  }
+
+}
 
 /* -------------------Social------------------- */
 
 #scl {
     font-family: 'Questrial', sans-serif;
-    background-image: url('me3.jpeg');
+    background-image: url('../images/me3.jpeg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -271,7 +267,7 @@ hr {
     margin-bottom: 90px;
 }
 
-#post {
+.post {
     margin:20px!important;
     padding: 0;
 }
@@ -295,8 +291,10 @@ hr {
             rgba(204, 0, 255, 0.718) 51%,
             rgba(0, 0, 0, 0.746) 100%);
     animation: AnimateBG 10s ease infinite;
-    box-shadow: 0 0em 1em 0.1em rgb(255, 255, 255);
+    box-shadow: 0 0 1em 0.1em rgb(255, 255, 255);
     z-index: 1;
+    position: sticky;
+    top: 0;
 }
 
 
@@ -305,11 +303,12 @@ hr {
 
 #cnt {
     font-family: 'Questrial', sans-serif;
-    background-image: url('me2.jpeg');
+    background-image: url('../images/me2.jpeg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+
 }
 
 
@@ -326,8 +325,10 @@ hr {
             rgba(191, 255, 0, 0.718) 51%,
             rgba(255, 0, 0, 0.746) 100%);
     animation: AnimateBG 10s ease infinite;
-    box-shadow: 0 0em 1em 0.1em rgb(255, 255, 255);
+    box-shadow: 0 0 1em 0.1em rgb(255, 255, 255);
     z-index: 1;
+    position: sticky;
+    top: 0;
 }
 
 
