--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,8 +36,10 @@ hr {
 
 #tutto footer {
     text-align: center;
-    position: relative;
-    bottom: -40vh;
+    position: fixed;
+    left: 0;
+    bottom: -300px;
+    width: 100%;
     font-size: small;
 }
 
@@ -78,7 +80,7 @@ hr {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-color: rgb(119, 40, 40);
+    background-color: black;
 }
 
 .vid:after {
